# ikuta-ml

./: .gitignore  README.md  pyproject.toml
ikuta_ml/crawler/: twitter_crawler.py
ikuta_ml/job/: get_dataset_job.py  preprocess_job.py  train_job.py
ikuta_ml/ml/: preprocess.py  seq2seq.py
ikuta_ml/util/: file_util.py  preprocess_util.py  string_util.py
references/: keras.ipynb  keras_lstm.py
tests/: conftest.py
tests/util/: test_file_util.py
