[tool.poetry]
name = "ikuta-ml"
version = "0.1.0"
description = ""
authors = ["adtak <adtak62@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
emoji = "^1.2.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    # mark a test.
    "test_a",
    # mark a test.
    "test_b",
]
addopts = "-m \"not test_a and not test_b\""
